[#209, #442] Allow to build with JDK 9. Add initial support for Hibernate 5.3 and DataNucleus 5.1. Adapt parameter handling in custom sql queries. Fix subview attribute flusher oversight. Documentation update