@@ -36,8 +36,6 @@
         <version.checkstyle>8.7</version.checkstyle>
         <maven.build.timestamp.format>yyyy</maven.build.timestamp.format>
         <currentYearDynamic>${maven.build.timestamp}</currentYearDynamic>
-        <processor.plugin.compilerArguments />
-        <surefire.openejb.jvm.params />
     </properties>
 
     <inceptionYear>2014</inceptionYear>
@@ -143,17 +141,11 @@
             </build>
         </profile>
         <profile>
-            <!-- Use latest javassist version on JDK > 9 -->
-            <id>jdk9</id>
+            <id>jdk9+</id>
             <activation>
                 <jdk>[1.9,)</jdk>
             </activation>
             <properties>
-                <version.javassist>3.22.0-CR2</version.javassist>
-                <processor.plugin.compilerArguments>--add-modules=java.xml.bind</processor.plugin.compilerArguments>
-                <!-- When forking, we need another flag -->
-                <!--<processor.plugin.compilerArguments>&#45;&#45;add-modules=java.xml.bind -J&#45;&#45;add-modules=java.xml.bind</processor.plugin.compilerArguments>-->
-                <surefire.openejb.jvm.params>--add-modules=java.xml.bind,java.corba</surefire.openejb.jvm.params>
                 <version.enforcer.plugin>3.0.0-M1</version.enforcer.plugin>
                 <maven.processor.source>1.9</maven.processor.source>
                 <maven.processor.target>1.9</maven.processor.target>
@@ -249,6 +241,10 @@
                         <exclude>**/src/main/java/com/blazebit/persistence/spring/data/impl/repository/DefaultRepositoryInformation.java</exclude>
                         <exclude>**/src/main/java/com/blazebit/persistence/spring/data/impl/repository/MethodLookups.java</exclude>
                         <exclude>**/src/main/java/org/springframework/data/jpa/repository/query/FixedJpaQueryCreator.java</exclude>
+
+                        <exclude>**/src/main/java/com/blazebit/persistence/deltaspike/data/impl/meta/RepositoryDefinitionException.java</exclude>
+                        <exclude>**/src/main/java/com/blazebit/persistence/deltaspike/data/impl/meta/RepositoryComponents.java</exclude>
+                        <exclude>**/src/main/java/com/blazebit/persistence/deltaspike/data/impl/meta/RepositoryComponentsFactory.java</exclude>
                     </excludes>
                     <properties>
                         <inceptionYear>${project.inceptionYear}</inceptionYear>
